--- a/urlshortly-dashboard/dashboard.html
+++ b/urlshortly-dashboard/dashboard.html
@@ -18,6 +18,9 @@
     <div class="main-wraper">
         <aside class="left-sidebar">
 
+            <div>
+                <h1>github</h1>
+            </div>
             <div class="sidebar-header">
                 <ul class="logo-ul">
                     <li><img class="aside-logo" src="/icons/urlshortly-logo-icon.png" alt=""><img class="aside-txt-logo"
